change getfirst to get(0)